--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Patrick Kalkman
 description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars2.githubusercontent.com/u/124125?v=3&s=140
 
 #
 # Flags below are optional
